[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gameworld"
authors = [
    {name = "Anonymous", email = "anonymous@anonymous.com"},
]
description = "Gameworld: Environments for 2-D Arcade Games in Python"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy==1.26.4",
    "gymnasium==0.29.1",
]
version="0.1.0"

[tool.setuptools.packages.find]
include = ["gameworld"]
